Integrate maven-user in continuum-acegi
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@439897 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -21,7 +21,6 @@
           <execution>
             <goals>
               <goal>java</goal>
-              <goal>jpox-jdo-mapping</goal>
             </goals>
           </execution>
         </executions>
@@ -45,4 +44,10 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.maven.shared.user</groupId>
+      <artifactId>maven-user-model</artifactId>
+    </dependency>
+  </dependencies>
 </project>
