--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,16 @@
         <version>1.0-alpha-3</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.maven.shared.user</groupId>
+        <artifactId>maven-user-model</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven.shared.user</groupId>
+        <artifactId>maven-user-controller</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
         <groupId>commons-dbcp</groupId>
         <artifactId>commons-dbcp</artifactId>
         <version>1.2.1</version>
