Use acegi implementations for password encoding
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@439974 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -422,6 +422,17 @@
         <version>1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.maven.shared.user</groupId>
+        <artifactId>maven-user-acegi</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven.shared.user</groupId>
+        <artifactId>maven-user-webapp</artifactId>
+        <type>war</type>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
         <groupId>commons-dbcp</groupId>
         <artifactId>commons-dbcp</artifactId>
         <version>1.2.1</version>
