--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -125,12 +125,14 @@
       <groupId>org.apache.maven.shared.user</groupId>
       <artifactId>maven-user-webapp</artifactId>
       <type>war</type>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.shared.user</groupId>
       <artifactId>maven-user-controller</artifactId>
-      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared.user</groupId>
+      <artifactId>maven-user-acegi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
