--- a/continuum-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/continuum-webapp/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   Not integrated with plexus
   <filter>
     <filter-name>Acegi Filter Chain Proxy</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.util.FilterChainProxy</param-value>
@@ -30,7 +30,7 @@
 
   <filter>
     <filter-name>Acegi HttpSessionContextIntegrationFilter</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.context.HttpSessionContextIntegrationFilter</param-value>
@@ -39,7 +39,7 @@
 
   <filter>
     <filter-name>Acegi AuthenticationProcessingFilter</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.ui.webapp.AuthenticationProcessingFilter</param-value>
@@ -49,7 +49,7 @@
 <!--
   <filter>
     <filter-name>Acegi RememberMeProcessingFilter</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.ui.rememberme.RememberMeProcessingFilter</param-value>
@@ -58,7 +58,7 @@
 
   <filter>
     <filter-name>Acegi AnonymousProcessingFilter</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.providers.anonymous.AnonymousProcessingFilter</param-value>
@@ -68,7 +68,7 @@
 
   <filter>
     <filter-name>Acegi ExceptionTranslationFilter</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.ui.ExceptionTranslationFilter</param-value>
@@ -77,7 +77,7 @@
 
   <filter>
     <filter-name>Acegi FilterSecurityInterceptor</filter-name>
-    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <filter-class>org.codehaus.plexus.xwork.filter.FilterToComponentProxy</filter-class>
     <init-param>
       <param-name>component</param-name>
       <param-value>org.acegisecurity.intercept.web.FilterSecurityInterceptor</param-value>
