Add dependency in maven-user-acegi
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@440283 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-security/continuum-security-acegi/pom.xml
+++ b/continuum-security/continuum-security-acegi/pom.xml
@@ -27,6 +27,10 @@
       <artifactId>continuum-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.maven.shared.user</groupId>
+      <artifactId>maven-user-acegi</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <scope>test</scope>
