--- a/continuum-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/continuum-webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@
     <param-name>extremecomponentsMessagesLocation</param-name>
     <param-value>localization/Continuum</param-value>
   </context-param>
+  <context-param>
+    <param-name>extremecomponentsMessagesLocation</param-name>
+    <param-value>localization/MavenUser</param-value>
+  </context-param>
 
 <!--
   Not integrated with plexus
