--- a/continuum-security/continuum-security-acegi/pom.xml
+++ b/continuum-security/continuum-security-acegi/pom.xml
@@ -60,6 +60,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
+        <version>1.0-beta-2</version>
         <executions>
           <execution>
             <goals>
