--- a/continuum-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/continuum-webapp/src/main/webapp/WEB-INF/web.xml
@@ -157,6 +157,7 @@
     <listener-class>org.codehaus.plexus.xwork.PlexusLifecycleListener</listener-class>
   </listener>
 
+  <!-- [jspc-maven-plugin:post-compiled-jsps-as-servlets] -->
 
   <error-page>
     <error-code>403</error-code>
