Workaround for WebWork exception swallowing, http://jira.opensymphony.com/browse/WW-291
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@440832 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -285,5 +285,11 @@
       <groupId>org.apache.maven.shared.user</groupId>
       <artifactId>maven-user-controller</artifactId>
     </dependency>
+    <!-- needed due to http://jira.opensymphony.com/browse/WW-291 -->
+    <dependency>
+      <groupId>org.acegisecurity</groupId>
+      <artifactId>acegi-security-webwork</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
