Copied maven user localization needed for extreme components
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@440868 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/continuum-webapp/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
     <param-value>/extremecomponents.properties</param-value>
   </context-param>
 
+  <!-- TODO: http://jira.codehaus.org/browse/CONTINUUM-846 -->
   <context-param>
     <param-name>extremecomponentsMessagesLocation</param-name>
     <param-value>localization/Continuum</param-value>
