--- a/pom.xml
+++ b/pom.xml
@@ -397,6 +397,11 @@
         <version>1.7.3.3</version>
       </dependency>
       <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.0.3</version>
+      </dependency>
+      <dependency>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-quartz</artifactId>
         <version>1.0-alpha-2</version>
