Move modello plugin version to parent
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@442352 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <dependentWarExcludes>WEB-INF/lib/**,WEB-INF/classes/**</dependentWarExcludes>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.modello</groupId>
+          <artifactId>modello-maven-plugin</artifactId>
+          <version>1.0-alpha-11-SNAPSHOT</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
