Rename mdo to xml for easier editing
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@447190 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -25,7 +25,7 @@
         <configuration>
           <version>1.0.0</version>
           <packageWithVersion>false</packageWithVersion>
-          <model>src/main/mdo/continuum.mdo</model>
+          <model>src/main/mdo/continuum.xml</model>
         </configuration>
       </plugin>
       <plugin>
