Add missing dependency and renamed mdo to xml
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@447210 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-rpc-client/pom.xml
+++ b/continuum-rpc-client/pom.xml
@@ -26,7 +26,7 @@
         <configuration>
           <version>1.0.0</version>
           <packageWithVersion>false</packageWithVersion>
-          <model>../continuum-model/src/main/mdo/continuum.mdo</model>
+          <model>../continuum-model/src/main/mdo/continuum.xml</model>
         </configuration>
       </plugin>
     </plugins>
@@ -51,6 +51,10 @@
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
       <version>2.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared.user</groupId>
+      <artifactId>maven-user-model</artifactId>
     </dependency>
   </dependencies>
 </project>
