--- a/continuum/continuum-webapp/pom.xml
+++ b/continuum/continuum-webapp/pom.xml
@@ -7,7 +7,6 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-webapp</artifactId>
   <name>Continuum Web APP</name>
-  <version>1.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
     <filters>
@@ -101,12 +100,32 @@
           </excludes>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>src/main/webapp/WEB-INF</directory>
+              <includes>
+                <include>database</include>
+                <include>temp</include>
+                <include>logs</include>
+                <include>working-directory</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-core</artifactId>
+    </dependency>
+    <dependency> <!-- added since depMgt doesn't override imported dependencies -->
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
@@ -199,6 +218,15 @@
       <artifactId>continuum-notifier-msn</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.maven.continuum</groupId>
+      <artifactId>continuum-xmlrpc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-xmlrpc</artifactId>
+      <version>1.0-beta-4</version>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-mail-sender-javamail</artifactId>
     </dependency>
@@ -224,3 +252,4 @@
     </dependency>
   </dependencies>
 </project>
+
