Align with trunk reducing coupling with maven-user
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@471829 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -19,6 +19,7 @@
           <execution>
             <goals>
               <goal>java</goal>
+              <goal>jpox-jdo-mapping</goal>
             </goals>
           </execution>
         </executions>
