--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <plugin>
           <groupId>org.codehaus.modello</groupId>
           <artifactId>modello-maven-plugin</artifactId>
-          <version>1.0-alpha-11-SNAPSHOT</version>
+          <version>1.0-alpha-11</version>
         </plugin>
       </plugins>
     </pluginManagement>
